Fix logical plan tests